--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" >
-  <style>
-      @import url("https://fonts.googleapis.com/css?family=Inter:400,700");
-    </style></head>
+    <title>TechNest</title>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
